added the image uploading

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -24,7 +24,7 @@
           <% @lists.each do |list| %>
             <div class="col">
               <div class="card shadow-sm">
-              <img class="card-img-top" src="<%=list.image_url%>"  width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false">
+              <img class="card-img-top" src="<%=cl_image_path list.image.key%>"  width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <div class="card-body">
                   <p class="card-text"><%= list.name %>.</p>
                   <div class="d-flex justify-content-between align-items-center">
