--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= @list.image_url %>);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%=cl_image_path @list.image.key%>);">
   <div class="container">
     <h1> <%= @list.name.capitalize %></h1>
   </div>
