--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -9,7 +9,7 @@
     Your Movies
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <%= link_to "Add a New Movie", new_list_movie_path(@list), class: "btn btn-outline-primary button" %>
+      <%= link_to "Add a New Movie", list_movies_path(@list), class: "btn btn-outline-primary button" %>
     </div>
   </div>
 
